--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,8 @@
     "argon2": "^0.27.2",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2"
